+Added automate compatibility for the geode crushers
+Added automate compatibilityb for the charcoal kilns
~Rewrote much of the logic related to automatce compatibility in the compatibility mod to be able to much easier add compatibility at least for new machines, in the future.
+Added in automate compatibility for the mining drill.

~~~~~~~~~~~~0.0.1 Revitalize 11-22-2022 xx.xx P.M~~~~~~~~~~~~~~
~Fixed crash on displaying strings for Mining Drill Blueprints
+Added in more advanced Geode Crushers! Blueprints can be unlocked by cracking 200, 500, 750, and 1000 geodes respectively via the mail! More advanced versions can also crack artifact troves and golden coconuts!
~Reduced the amount of time AdvancedGeodeCrushers take to process.
+Clint now sells the advanced geode crusher blueprints on the odd off case that the ones sent in the mail are lost somehow.

~~~~~~~~~~~~0.0.1 Revitalize 11-10-2022 xx.xx P.M~~~~~~~~~~~~~~
+Added mail that Clint sends out to start selling mining drills.
+Upgraded MailManager.cs to start being able to attach custom items from item references to mail.
+Added in Movie Theater ticket subscription, which means that you can get free tickets every season!
~Fixed json properties on ItemReference.cs


~~~~~~~~~~~~0.0.1 Revitalize 11-5-2022 xx.xx P.M~~~~~~~~~~~~~~
-Removed Strings in base mod folder
+Added Revitalize Content Packs which are currently used for loading strings based on the game's current locale. Allows for translations of the mod's content.

~~~~~~~~~~~~0.0.1 Revitalize 11-3-2022 xx.xx P.M~~~~~~~~~~~~~~
+Added Burner Mining Drill Blueprints sold by Clint when the bottom of the mines are reached.
+Added Electric Mining Drill Blueprints sold by Clint when the bottom of the mines are reached and a battery pack has been obtaied.
+Added Nuclear Mining Drill Blueprints sold by Qi's Walnut Room.
+Added Magical Mining Drill Blueprints sold by Qi's Walnut Room.


~~~~~~~~~~~~0.0.1 Revitalize 10-31-2022 xx.xx P.M~~~~~~~~~~~~~~